--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@effect/platform": "^0.84.3",
+    "@effect/platform-browser": "^0.64.3",
     "@icons-pack/react-simple-icons": "^12.9.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -27,6 +29,7 @@
     "@shikijs/transformers": "^3.4.2",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
