--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@effect/platform": "^0.84.3",
     "@effect/platform-browser": "^0.64.3",
+    "@hookform/resolvers": "^5.0.1",
     "@icons-pack/react-simple-icons": "^12.9.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -40,13 +41,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.4.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
+    "zod": "^3.25.46",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
