--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@effect/platform": "^0.84.4",
     "@hookform/resolvers": "^5.0.1",
     "@icons-pack/react-simple-icons": "^13.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -73,7 +74,8 @@
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.25.48"
+    "zod": "^3.25.48",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
